fix: Large images no longer overlap

--- a/src/index.scss
+++ b/src/index.scss
@@ -16,11 +16,20 @@ h1, h2, h3, h4 {
   margin-bottom: 1.3rem;
 }
 
-img.aligncenter {
-  display: block;
-  margin: 0 auto;
-}
-
 b {
   font-weight: 800;
+}
+
+/* WP specific classes */
+
+.wp-content {
+  img {
+    &.aligncenter {
+      display: block;
+      margin: 0 auto;
+    }
+    &.size-full {
+      width: 100%;
+    }
+  }
 }
